// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeTitle Component matches snapshot with additional props 1`] = `
<h1
  class="mt-6 mb-4 text-header justify-text-header text-(length:--ul-theme-font-title-size) font-title"
  data-testid="title"
  id="test-id"
>
  Test Title
</h1>
`;

exports[`ULThemeTitle Component matches snapshot with custom className 1`] = `
<h1
  class="mt-6 mb-4 text-header justify-text-header text-(length:--ul-theme-font-title-size) font-title custom-class"
>
  Test Title
</h1>
`;

exports[`ULThemeTitle Component matches snapshot with default props 1`] = `
<h1
  class="mt-6 mb-4 text-header justify-text-header text-(length:--ul-theme-font-title-size) font-title"
>
  Test Title
</h1>
`;

exports[`ULThemeTitle Component matches snapshot with multiple children 1`] = `
<h1
  class="mt-6 mb-4 text-header justify-text-header text-(length:--ul-theme-font-title-size) font-title"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</h1>
`;
